--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,7 @@ CMakeLists.txt.user*
 
 # Python
 *.qtcreator
-*ui_form.py
+ui_form.py
 *.pyc
 
 # Binaries
@@ -83,3 +83,5 @@ CMakeLists.txt.user*
 .uic/
 /build*/
 *.pyproject.user
+data
+.idea
